--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <p class="text-white">Por cada respuesta sumaras puntos.</p>
                                 <p class="text-white">Obten la MAYOR cantidad de puntos posibles.</p>
                                 <p class="text-white">Llega al final del juego y obten tu premio.</p>
-                                <img src="img/200w.gif" alt="">
+                                <img src="img/200w.gif" alt="" class="img-fluid">
                             </div>
                         </div>
                     </div>
